# obfuscation

./: CMakeLists.txt  obf1.cpp  obf2.cpp  orig.cpp
